[tool.poetry]
name = "CodeRockr"
version = "0.1.0"
description = ""
authors = ["gabriella <gabriellasoares2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
Pillow = "^9.2.0"
django-filter = "^22.1"
rest_condition = "^1.0.3"
drf-yasg = "^1.21.4"
pytest-django = "^4.5.2"
numpy = "^1.23.4"
pandas = "^1.5.0"
ptw = "^1.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
